[gd_scene load_steps=5 format=3 uid="uid://dp5qtqphvkqxy"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_ql7ky"]
[ext_resource type="FontFile" uid="uid://cu4lf4od2owng" path="res://Assets/font/FlappyBird.ttf" id="2_3e1cj"]
[ext_resource type="Texture2D" uid="uid://x218sp1de1n0" path="res://Assets/gameover.png" id="3_p2y0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljmoe"]
bg_color = Color(0.917647, 0.654902, 0.435294, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ql7ky")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointsLabel" type="Label" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_3e1cj")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
texture = ExtResource("3_p2y0h")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ljmoe")

[node name="Button" type="Button" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.5
offset_top = -15.5
offset_right = 30.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_3e1cj")
theme_override_font_sizes/font_size = 40
text = "restart"

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/Button" to="." method="_on_button_pressed"]
